<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/registerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="true"
            android:gravity="center"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:overScrollMode="always"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:verticalScrollbarPosition="left"
            >


            <EditText
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints=""
                android:hint="@string/prompt_username"

                android:inputType="none|text"
                android:selectAllOnFocus="true"
                android:visibility="visible" />

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints=""
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:visibility="visible" />

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints=""
                android:hint="@string/prompt_email"
                android:inputType="none|textEmailAddress"
                android:selectAllOnFocus="true"
                android:visibility="visible" />

            <EditText
                android:id="@+id/nameRegister"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints=""
                android:hint="@string/prompt_name"
                android:inputType="none|text"
                android:selectAllOnFocus="true"
                android:visibility="visible" />

            <EditText
                android:id="@+id/surnameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints=""
                android:hint="@string/prompt_surname"
                android:inputType="none|text"
                android:selectAllOnFocus="true"
                android:visibility="visible" />

            <Switch
                android:id="@+id/registerAsCompany"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:foregroundGravity="left"
                android:gravity="center"
                android:text="@string/company" />


            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_marginBottom="48dp"
                android:enabled="true"
                android:text="@string/register"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>