<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/preferences_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50sp"
                    android:layout_marginBottom="50sp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/user_icon" />


                    <TextView
                        android:id="@+id/user_texview_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5sp"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/date_button_id"
                        android:layout_width="54dp"
                        android:layout_height="52dp"
                        android:src="@drawable/date_icon" />

                    <ImageButton
                        android:id="@+id/time_button_id"
                        android:layout_width="54dp"
                        android:layout_height="52dp"
                        android:contentDescription="@string/image_user_default"
                        android:src="@drawable/time_icon" />


                </LinearLayout>

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextCountries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:hint="@string/prompt_country" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextSports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/prompt_sport" />

                <Spinner
                    android:id="@+id/spinner_roles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="role"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp" />

                <Switch
                    android:id="@+id/switch_gps"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/startGps" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>