<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_event_id"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:src="@drawable/sport" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/quantum_black_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/infoStructure"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/quantum_black_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/namestructure"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/structureName_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/typeofstructure"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/structureType_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/structure"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/covered_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/distance"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/distance_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/price"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/quantum_black_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/infoevent"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/quantum_black_divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/organizer"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/organiser_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/numberofpartecipants"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numberOfPartecipants_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/freePlaces"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/empty_slot_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_role_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/willplayonrole"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/role_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/date_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text=""
                        android:textAlignment="center" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/quantum_black_divider" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <Button
                    android:id="@+id/join_event_button_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Button" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>